--- a/01_HTML_CSS/04_linking_css.html
+++ b/01_HTML_CSS/04_linking_css.html
@@ -4,21 +4,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Exercise 1</title>
-    <meta
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-      name="viewport"
-    />
 
-    <!-- Linking file here -->
-    <link rel="stylesheet" href="css/exercise-1.css" />
-    <!-- Linking file here -->
-     
+    <title>Linking CSS</title>
+
+    <!-- Style tag -->
+    <style>
+      a {
+        color: blue;
+        font-size: 20px;
+      }
+    </style>
+
+    <!-- External style sheet -->
+    <link href="./04_style.css" type="text/css" rel="stylesheet" />
+
   </head>
 
   <body>
-    <div class="container">
-      <a href="https://google.com" target="_blank">This is a link</a>
-    </div>
+
+    <!-- Style tag -->
+    <button>Click!</button>
+
+    <br><br><br><br>
+
+    <a href="https://google.com" target="_blank">This is a link</a>
+
+    <!-- External style sheet -->
+    <br><br><br><br>
+
+    <!-- Inline -->
+    <p style="color: red; font-size: 20px;">I'm learning to code!</p>
+
   </body>
 </html>
