--- a/01_HTML/02_attributes.html
+++ b/01_HTML/02_attributes.html
@@ -6,8 +6,20 @@
     <meta charset="utf-8" />
     <title>My First Template</title>
     <meta name="description" content="A webpage with my first HTML template." />
+    <style>
+      #love{
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <p>Hello World!</p>
+
+    <div id="love">This is wonderful!</div>
+
+    <img src="pic.avif" width="55%"/>
+    <br>
+    <a href="http://www.google.com">Google it!</a>
+    
   </body>
 </html>
