--- a/02_CSS/04_box_model.html
+++ b/02_CSS/04_box_model.html
@@ -1,30 +1,27 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8" />
-    <title>Exercise 1</title>
-    <meta
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-      name="viewport"
-    />
+<head>
+  <meta charset="utf-8" />
+  <title>Exercise 1</title>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
 
-    <!-- Shows every element's box in the HTML -->
-    <style>
-        * {
-        border: 1px solid red !important;
-        }
-    </style>
+  <!-- Shows every element's box in the HTML -->
+  <style>
+    * {
+      border: 1px solid red !important;
+    }
+  </style>
 
-  </head>
+</head>
 
-  <body>
-    <div class="container">
-      <a href="https://google.com" target="_blank">This is a link</a>
-    </div>
-<div class=”container”>
-<p> Welcome to <span>the show </span>! </p>
-</div>
-  </body>
+<body>
+  <div class="container">
+    <a href="https://google.com" target="_blank">This is a link</a>
+  </div>
+  <div class=”container”>
+    <p> Welcome to <span>the show </span>! </p>
+  </div>
+</body>
+
 </html>
