--- a/02_CSS/05_display.html
+++ b/02_CSS/05_display.html
@@ -18,6 +18,7 @@
             display: block;
             /* display: none; */
             border: 1px solid red;
+            width: 400px;
         }
 
     </style>
