--- a/03_CSS_Flexbox/02_align_justify.html
+++ b/03_CSS_Flexbox/02_align_justify.html
@@ -1,36 +1,41 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Exercise 1</title>
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Flexbox</title>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
 
   <style>
-    .container{
-        display:flex;
-        flex-direction: column; /* determines main axis */
-        justify-content: start; /* alignment in the main axis */
-        align-items: center; /* alignment in the cross axis */
-        border: 2px solid yellow;
+    .container {
+      display: flex;
+      flex-direction: column;
+      /* determines main axis */
+      justify-content: end;
+      /* aligns items in the main axis */
+      align-items: center;
+      /* aligns items in the cross axis */
+      border: 2px solid yellow;
+      width: 800px;
+      height: 800px;
     }
-    .box{
-            width: 250px;
-            height: 150px;
-            border: 1px solid red;
+
+    .box {
+      width: 250px;
+      height: 150px;
+      border: 1px solid red;
     }
   </style>
-  </head>
+</head>
 
-  <body>
+<body>
 
-  <div class = "container">
+  <div class="container">
     <div class="box"> Box 1</div>
     <div class="box"> Box 2</div>
     <div class="box"> Box 3</div>
   </div>
-  </body>
+
+</body>
+
 </html>
