--- a/04_CSS_Grid/01_rows_columns.html
+++ b/04_CSS_Grid/01_rows_columns.html
@@ -17,15 +17,16 @@
             height: 500px;
             grid-template-columns: 300px 300px 150px;
             margin: auto;
-            grid-gap: 5px;
+            grid-gap: 10px;
             border: 2px solid red;
             justify-content: center;
             align-items: center;
         }
         .box{
             display: flex;
-            align-items: center;
-            justify-content: center;
+            flex-direction: row;
+            align-items: start;
+            justify-content: end;
             width: 150px;
             height: 150px;
             border: 1px solid red;
